--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-badger-accordion": "^2.0.2",
     "vue-js-modal": "^2.0.1",
     "vue-router": "^3.5.1",
+    "vue-scrollto": "^2.20.0",
     "vue-slick-carousel": "^1.0.6",
     "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.7",
